tests/script_errors/function_error_n/error.txt
Error: 
    1 | core::string::format(7, "snot", "badger", "cake")
      | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Runtime error in function string::format/4: expected 1st parameter to format to be a format specifier e.g. to print a number use `string::format("{{}}", 1)`
